[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FPFS"
version = "3.1.0"
authors = [
  { name="Xiangchong Li", email="mr.superonion@hotmail.com" },
  { name="Andy Park", },
]
description = "An analytic shear estimator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mr-superonion/FPFS"
"Bug Tracker" = "https://github.com/mr-superonion/FPFS/issues"
